# ViT-Probing

./: .gitignore  .python-version  Dockerfile  README.md  pyproject.toml  requirements.txt
.local/share/fish/generated_completions/: a2ping.fish  alsactl.fish  ant.fish  apt-get.fish  atd.fish  autosp.fish  axohelp.fish  b2.fish  batcat.fish  bcp.fish  bibtexu.fish  bison.fish  bjam.fish  blender.fish  btrfs-check.fish  btrfs-convert.fish  btrfs-device.fish  btrfs-filesystem.fish  btrfs-inspect-internal.fish  btrfs-receive.fish  btrfsck.fish  btrfstune.fish  bundle-add2.fish  bundle-binstubs2.fish  bundle-check2.fish  bundle-clean2.fish  bundle-doctor2.fish  bundle-exec2.fish  bundle-gem2.fish  bundle-info2.fish  bundle-init2.fish  bundle-install2.fish  bundle-list2.fish  bundle-lock2.fish  bundle-outdated2.fish  bundle-platform2.fish  bundle-remove2.fish  (+412 more)
python/: CLI_parser.py  Makefile  checkpoint_loader.py  conv_tf.py  encoder_dataset.py  main.py  main_driver.py  model.py  probe.py  probes\npconv_vs_vit\n  probing.py  reg_vit_test.py  train_probes.py  trained_probe.py  untrained_probe.py  untrained_vit.py  utility.py  vit.py  vit_tf.py
python/checkpoints/tf/: S_18-RES_72-CONV_F32_K18.data-00000-of-00001  S_18-RES_72-CONV_F32_K18.index  S_18-RES_72-NOCONV.data-00000-of-00001  S_18-RES_72-NOCONV.index  S_8-RES_32-CONV_F16_K8.data-00000-of-00001  S_8-RES_32-CONV_F16_K8.index  S_8-RES_32-NOCONV.data-00000-of-00001  S_8-RES_32-NOCONV.index  checkpoint  trained_chkpt.data-00000-of-00001  trained_chkpt.index
scripts/: automate.sh  slurmDocker.sh  slurmProbe.sh
(+36 files in other folders)
