[tool.poetry]
name = "vit-probing"
version = "0.1.0"
description = "Probing intermediate layers of Vision Transfrormers"
authors = ["amaan4152, AlexKoldy"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
